# Subgraph-Isomorphism-Solver

./: CMakeLists.txt  train_model.py
src/: ISMSolver.h  cpu_solver.cpp  graph.h  main.cpp  ml_solver.h
src/solvers/: cpu_solver.cpp  ml_solver.cpp  optdfs_solver.cu  vf2_solver.cpp
